[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/vehicles/car1.png" type="Texture" id=1]
[ext_resource path="res://vehicle_enter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.9071, 16.829 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.1246, 27.6362 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="VehicleCamera" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DriverDoor" type="Position2D" parent="."]
position = Vector2( 0, 18.3904 )

[node name="Area2D" type="Area2D" parent="."]

[node name="PlayerEnterRange" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
